FIX(ui): fix gadpa-logo to show in home page & fixed herotitle and p so it wont overlap on smaller screens

--- a/gadpadebateapp/src/css/HeroTitle.css
+++ b/gadpadebateapp/src/css/HeroTitle.css
@@ -10,7 +10,7 @@
 .herotitle {
     position: relative;
     width: 100%;
-    height: 8vh;
+    min-height: 8vh;
 }
 
 .herotitle-outer {
@@ -58,6 +58,7 @@
     font-size: 1.6rem;
     color: var(--text-color);
     margin: 0;
+    margin-top: 2rem;
 }
 
 @media (max-width: 768px) {
@@ -66,6 +67,6 @@
     }
 
     .title p {
-        font-size: 1.2rem;
+        font-size: 0.8rem;
     }
 }
